metadata/force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__OrderSource__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderSource__c</fullName>
    <description>Name of the system where the order originated. This field is optional.</description>
    <label>Order Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>