metadata/force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderStatus__c</fullName>
    <description>Displayed order status. Orders initially placed are all in Order Submitted status. All other statuses may be implementation specific.</description>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Order Submitted</fullName>
            </value>
            <value>
                <fullName>Cancel Submitted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Return Submitted</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Partial Shipped</fullName>
            </value>
            <value>
                <fullName>Bill Of Material</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>